WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117485
text-transform: capitalize shouldn't upconvert
https://bugs.webkit.org/show_bug.cgi?id=117485
Summary
text-transform: capitalize shouldn't upconvert
Ryosuke Niwa
Reported
2013-06-10 21:23:01 PDT
Consider merging
https://chromium.googlesource.com/chromium/blink/+/c5a221d6da2443df0639c01c40aac6040908ec79
In looking at STRING_STATS for Mobile New York Times, I noticed that text-transform: capitalize is bloating memory by upconverting strings. It's a small amount of memory, but there's no reason to upconvert the strings. After this CL, all the strings used by Mobile New York Times are fully optimized (or at least they will be after
https://codereview.chromium.org/16158008/
lands).
Attachments
Merges the patch
(2.83 KB, patch)
2013-06-10 21:36 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-06-10 21:36:50 PDT
Created
attachment 204282
[details]
Merges the patch
WebKit Commit Bot
Comment 2
2013-06-10 22:40:38 PDT
Comment on
attachment 204282
[details]
Merges the patch Clearing flags on attachment: 204282 Committed
r151422
: <
http://trac.webkit.org/changeset/151422
>
WebKit Commit Bot
Comment 3
2013-06-10 22:40:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug