text-transform: capitalize shouldn't upconvert https://bugs.webkit.org/show_bug.cgi?id=117485

Reviewed by Adam Barth.

Avoid the upconversion. Merge https://chromium.googlesource.com/chromium/blink/+/c5a221d6da2443df0639c01c40aac6040908ec79.

* rendering/RenderText.cpp:
(WebCore::makeCapitalized):


Canonical link: https://commits.webkit.org/135643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151422 268f45cc-cd09-0410-ab3c-d52691b4dbfc